--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "nextjs",
   "version": "0.1.0",
+  "type": "module",
+  "insert-dummy-jobs": "ts-node insert.ts",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -42,19 +44,24 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
@@ -64,8 +71,11 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
