--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -53,12 +54,17 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "form-data": "^4.0.1",
+    "formidable": "^3.5.2",
+    "framer-motion": "^11.13.5",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -66,6 +72,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-router-dom": "^7.0.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
