--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "insert-dummy-jobs": "ts-node insert.ts",
   "private": true,
   "scripts": {
+    "analyze": "cross-env ANALYZE=true npm run build",
     "dev": "nodemon --watch models --exec next dev",
     "build": "next build",
     "start": "next start",
@@ -82,6 +83,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.1.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
