--- a/package.json
+++ b/package.json
@@ -85,9 +85,10 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^15.1.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
