--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "form-data": "^4.0.1",
+    "formdata-node": "^6.0.3",
     "formidable": "^3.5.2",
     "framer-motion": "^11.13.5",
     "input-otp": "^1.2.4",
