package.json update

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -87,7 +88,8 @@
     "@next/bundle-analyzer": "^15.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
