--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "nextjs",
   "version": "0.1.0",
-  "type": "module",
   "insert-dummy-jobs": "ts-node insert.ts",
   "private": true,
   "scripts": {
     "analyze": "cross-env ANALYZE=true npm run build",
-    "dev": "nodemon --watch models --exec next dev",
+    "typecheck": "tsc --noEmit",
+"dev": "npm run typecheck && nodemon --watch models --exec next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "worker:dev": "ts-node -P tsconfig.worker.json lib/queue/workers/index.ts",
+    "worker:build": "tsc -p tsconfig.worker.json",
+    "worker:start": "node dist/lib/queue/workers/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -41,10 +44,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "amqplib": "^0.10.5",
     "autoprefixer": "10.4.15",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
@@ -77,22 +81,27 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.12.7",
+    "redis": "^4.7.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.1.2",
+    "@types/amqplib": "^0.10.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.11",
     "@types/nodemailer": "^6.4.17",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2"
   }
 }
