--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "analyze": "cross-env ANALYZE=true npm run build",
     "typecheck": "tsc --noEmit",
-"dev": "npm run typecheck && nodemon --watch models --exec next dev",
+    "dev": "npm run typecheck && nodemon --watch models --exec next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,6 +15,7 @@
     "worker:start": "node dist/lib/queue/workers/index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.777.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
