--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "mongoose": "^8.8.4",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -98,6 +98,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.11",
+    "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
