--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "next lint",
     "worker:dev": "ts-node -P tsconfig.worker.json lib/queue/workers/index.ts",
     "worker:build": "tsc -p tsconfig.worker.json",
-    "worker:start": "node dist/lib/queue/workers/index.js"
+    "worker:start": "node dist/lib/queue/workers/index.js",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --watch --config jest.config.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
@@ -73,7 +75,7 @@
     "next-themes": "^0.3.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
@@ -89,19 +91,28 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
+    "vitest": "^3.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.1.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/amqplib": "^0.10.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.11",
     "@types/node-fetch": "^2.6.12",
     "@types/nodemailer": "^6.4.17",
     "cross-env": "^7.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2"
